# libntrdwc

./: .gitignore  README.md  meson.build  meson.options
include/base/: dwc_friend.h
include/decomp/: decomp_defs.h
include/gs/: gsAssert.h  nonport.h
include/nd/: DWCi_Nd.h
include/nhttp/: NHTTP.h
libraries/ac/: meson.build
libraries/ac/include/: ac_private.h  beacon.h  callback.h  close.h  connect.h  error.h  makelist.h  retry.h  search.h  shop_usb.h  start.h  test.h
libraries/ac/src/: beacon.c  callback.c  close.c  connect.c  dwc_ac.c  error.c  makelist.c  meson.build  nintendospot.c  retry.c  search.c  shop_usb.c  start.c  test.c
libraries/account/: meson.build
libraries/auth/: meson.build
libraries/auth/include/: dwc_serverurl.h
libraries/auth/src/: dwc_auth.c  dwc_ca_cybertrust_baltimore.c  dwc_ca_cybertrust_globalsign.c  dwc_ca_cybertrust_gteglroot.c  dwc_ca_cybertrust_gteroot.c  dwc_ca_nas_self.c  dwc_ca_thawte_premiumserver.c  dwc_ca_thawte_server.c  dwc_ca_verisign_c3pcag2v2.c  dwc_ca_verisign_c3pcag3v2.c  dwc_ca_verisign_pca3ssv4.c  dwc_ca_verisign_secureserver.c  dwc_cal.c  dwc_http.c  dwc_nastime.c  dwc_netcheck.c  dwc_prof.c  dwc_svl.c  meson.build  util_base64.c
libraries/base/: meson.build
libraries/base/src/: dwc_connectinet.c  dwc_friend.c  dwc_match.c  dwc_nd.c
libraries/bm/: meson.build
libraries/bm/include/: dwc_backup.h  dwc_local.h  util_wifiidtool_internal.h
libraries/bm/src/: dwc_backup.c  dwc_bm_init.c  meson.build  util_wifiidtool.c
libraries/gs/: nonport.c
libraries/gs/chat/: chatSocket.c  meson.build
libraries/gs/common/: meson.build
libraries/gs/ghttp/: ghttpCommon.c  ghttpMain.c  meson.build
libraries/gs/gp/: gpiBuddy.c  gpiPeer.c  meson.build
libraries/gs/gstats/: meson.build
libraries/gs/gt2/: gt2Encode.c  meson.build
libraries/gs/natneg/: meson.build
libraries/gs/pinger/: meson.build
libraries/gs/pt/: meson.build
libraries/gs/qr2/: meson.build  qr2.c  qr2regkeys.c
libraries/gs/serverbrowsing/: meson.build  sb_queryengine.c
libraries/nd/: meson.build
libraries/nd/src/: dwci_nd_attr.c  dwci_nd_base64.c  dwci_nd_bgnend.c  dwci_nd_ca.c  dwci_nd_dwc_nitro.c  dwci_nd_fileapi.c  dwci_nd_filecount.c  dwci_nd_fileget.c  dwci_nd_filelist.c  dwci_nd_os_nitro.c  dwci_nd_stdlib_nitro.c  dwci_nd_string.c  meson.build
libraries/nhttp/: meson.build
libraries/nhttp/src/: meson.build  nhttp_bgnend.c  nhttp_control.c  nhttp_list.c  nhttp_os_nitro.c  nhttp_recvbuf.c  nhttp_request.c  nhttp_resolve_nitro.c  nhttp_response.c  nhttp_socket_nitro.c  nhttp_stdlib_nitro.c  nhttp_thread.c  nhttp_token.c
libraries/ranking/: meson.build
libraries/util/: meson.build
subprojects/: NitroSDK.wrap  NitroSystem.wrap  NitroWiFi.wrap
