option('mwrap_ver', type: 'string', value: 'default', description: 'Version of Metrowerks toolchain to use')
option('mwrap_sdk', type: 'string', value: 'default', description: 'Version of Metrowerks libraries to use')
option('link_ppwlobby', type: 'boolean', value: false)
option('build_target', type: 'combo', choices: ['arm', 'win64', 'linux'], value: 'arm', description: 'Target build platform', yield: true)
