libdwcnd_srcs = files(
    'dwci_nd_attr.c',
    'dwci_nd_base64.c',
    'dwci_nd_bgnend.c',
    'dwci_nd_ca.c',
    'dwci_nd_cancel.c',
    'dwci_nd_dwc_nitro.c',
    'dwci_nd_fileapi.c',
    'dwci_nd_filecount.c',
    'dwci_nd_fileget.c',
    'dwci_nd_filelist.c',
    'dwci_nd_os_nitro.c',
    'dwci_nd_stdlib_nitro.c',
    'dwci_nd_string.c'
)
