libdwcnhttp_srcs = files(
    'nhttp_bgnend.c',
    'nhttp_control.c',
    'nhttp_list.c',
    'nhttp_os_nitro.c',
    'nhttp_recvbuf.c',
    'nhttp_request.c',
    'nhttp_resolve_nitro.c',
    'nhttp_response.c',
    'nhttp_socket_nitro.c',
    'nhttp_stdlib_nitro.c',
    'nhttp_thread.c',
    'nhttp_token.c'
)
